feat: fixed all the dates

--- a/CabBookingWebApp/Views/Booking/Current.cshtml
+++ b/CabBookingWebApp/Views/Booking/Current.cshtml
@@ -24,7 +24,7 @@
             <tr>
                 <td>@booking.StartLocation</td>
                 <td>@booking.EndLocation</td>
-                <td>@booking.BookingTime</td>
+                <td>@booking.BookingTime.ToLocalTime().ToString("yyyy-MM-dd hh:mm tt")</td>
                 <td>@booking.CabType</td>
                 <td>@booking.PassengerCount</td>
                 <td>
